--- a/OrderBookEngine.vcxproj
+++ b/OrderBookEngine.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="order.h" />
+    <ClInclude Include="OrderBookEngine.h" />
     <ClInclude Include="order_book.h" />
   </ItemGroup>
   <ItemGroup>
@@ -27,6 +28,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="order.cpp" />
+    <ClCompile Include="OrderBookEngine.cpp" />
     <ClCompile Include="order_book.cpp" />
     <ClCompile Include="test_order_book.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
