--- a/OrderBookEngine.vcxproj.filters
+++ b/OrderBookEngine.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="order_book.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="OrderBookEngine.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="order.cpp">
@@ -34,6 +37,9 @@
     </ClCompile>
     <ClCompile Include="test_smoke.cpp">
       <Filter>tests</Filter>
+    </ClCompile>
+    <ClCompile Include="OrderBookEngine.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
