--- a/OrderBookEngine.vcxproj.filters
+++ b/OrderBookEngine.vcxproj.filters
@@ -10,36 +10,45 @@
     <Filter Include="tests">
       <UniqueIdentifier>{3aed4d14-98fc-4630-9358-a21e1ec4af41}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources">
+      <UniqueIdentifier>{79b223af-f65a-4789-92af-d08e549c5816}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headers">
+      <UniqueIdentifier>{db56cb38-81cf-4cd7-b308-ca9e25f7014b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="NewFilter1">
+      <UniqueIdentifier>{8f74c8cb-ddb0-46c7-aa81-f6080c0234eb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="OrderBookEngine.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
     <ClInclude Include="order.h">
-      <Filter>include</Filter>
+      <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="order_book.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="OrderBookEngine.h">
-      <Filter>include</Filter>
+      <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="order.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="order_book.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="test_order_book.cpp">
       <Filter>tests</Filter>
     </ClCompile>
     <ClCompile Include="test_smoke.cpp">
       <Filter>tests</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="order.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="order_book.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
     <ClCompile Include="OrderBookEngine.cpp">
-      <Filter>src</Filter>
+      <Filter>Sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
