--- a/OrderBookEngine.vcxproj
+++ b/OrderBookEngine.vcxproj
@@ -19,14 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Sources\main.cpp" />
-    <ClCompile Include="Sources\order.cpp" />
-    <ClCompile Include="Sources\OrderBookEngine.cpp" />
-    <ClCompile Include="Sources\order_book.cpp" />
-    <ClCompile Include="tests\test_order_book.cpp" />
-    <ClCompile Include="tests\test_smoke.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
@@ -36,6 +28,14 @@
     <ClInclude Include="Headers\order.h" />
     <ClInclude Include="Headers\OrderBookEngine.h" />
     <ClInclude Include="Headers\order_book.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Sources\main.cpp" />
+    <ClCompile Include="Sources\order.cpp" />
+    <ClCompile Include="Sources\OrderBookEngine.cpp" />
+    <ClCompile Include="Sources\order_book.cpp" />
+    <ClCompile Include="Tests\test_order_book.cpp" />
+    <ClCompile Include="Tests\test_smoke.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
